DEV Add hover effects, fix trend layout issues

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,14 @@
   margin: 0 auto;
 }
 
+button {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+}
+
 /***** Sidebar *****/
 
 aside {
@@ -60,10 +68,15 @@ aside {
   justify-content: flex-start;
   gap: 1rem;
   width: 100%;
+  border-radius: 20px;
+}
+
+.sidebar a:hover {
+  outline: 1px solid white;
+  outline-offset: 0.5rem;
 }
 
 .sidebar a span {
-  text-decoration: none;
   color: white;
   font-size: 1.2rem;
 }
@@ -110,13 +123,16 @@ header {
   background-color: inherit;
 }
 
+.notifications-button:hover {
+  color: crimson;
+}
+
 .profile a {
   display: flex;
   flex-wrap: wrap;
   gap: .2rem;
   align-items: center;
   justify-content: space-around;
-  text-decoration: none;
   color: inherit;
 }
 
@@ -152,6 +168,11 @@ header {
   font-weight: bold;
   border-radius: 20px;
   border: none;
+}
+
+.header-button:hover {
+  outline: 1px solid white;
+  outline-offset: -5px;
 }
 
 /***** Main section *****/
@@ -193,6 +214,20 @@ img {
   box-shadow: 1px 1px 5px gray;
 }
 
+a h4 {
+  text-decoration: none;
+  color: #0C4C6E;
+}
+
+a h4:hover {
+  color: crimson;
+}
+
+
+.card a:hover {
+  color: crimson;
+}
+
 .description {
   opacity: .5;
 }
@@ -204,8 +239,11 @@ img {
 
 .card-links > a {
   padding-left: .5rem;
-  text-decoration: none;
   color: #0C4C6E;
+}
+
+.card-links a:hover {
+  color: crimson;
 }
 
 .announcements-wrapper {
@@ -233,17 +271,20 @@ img {
 
 .trend {
   display: grid;
-  grid-template: 1fr 1fr / 70px 1fr;
-  padding-bottom: .5rem;
+  grid-template-rows: 1rem  1fr;
+  grid-template-columns: 50px  1fr;
+  align-items: center;
+  column-gap: 1rem;
+  padding: .5rem 0;
 }
 
-.trend > img {
+.trend img {
   grid-row: 1 / 3;
-  align-self: end;
 }
 
-.trend > h4 {
-  align-self: end;
+.trend a,
+.trend p {
+  grid-column: 2 / 3;
 }
 
 .trend > p {
